fix template 'index.html', modified .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -2,3 +2,6 @@ SECRET_KEY="Your secret key"
 DEBUG="Your debug mode [True / False]"
 
 DB_NAME="Your name for the database"
+
+EMAIL_HOST_USER = "Your email"
+EMAIL_HOST_PASSWORD = "Your app password"
