--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,26 @@
+asgiref==3.8.1
+black==24.10.0
+click==8.1.7
+colorama==0.4.6
 Django==5.1.3
-Black==24.10.0
-flake8==5.0.4
+django-crispy-forms==1.14.0
+django-debug-toolbar==4.4.6
+Faker==33.1.0
+flake8==7.1.1
 flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
+mccabe==0.7.0
+mypy-extensions==1.0.0
+packaging==24.2
+pathspec==0.12.1
 pep8-naming==0.13.2
-django-debug-toolbar==4.4.6
-django-crispy-forms==1.14.0
 pillow==11.0.0
+platformdirs==4.3.6
+pycodestyle==2.12.1
+pyflakes==3.2.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
-Faker==33.1.0
+six==1.16.0
+sqlparse==0.5.2
+typing_extensions==4.12.2
+tzdata==2024.2
