deploy: divide the settings into base, dev, prod. Connect Postgres

--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,17 @@
-SECRET_KEY="Your secret key"
-DEBUG="Your debug mode [True / False]"
+# DJANGO SETTINGS
+SECRET_KEY=<django_secret_key>
+DJANGO_SETTINGS_MODULE=<core/manage.py>
 
-DB_NAME="Your name for the database"
+# DB SQLITE
+DB_NAME=<db_name>
 
-EMAIL_HOST_USER = "Your email"
-EMAIL_HOST_PASSWORD = "Your app password"
+# EMAIL SETTINGS
+EMAIL_HOST_USER=<email>
+EMAIL_HOST_PASSWORD=<app_password>
+
+# DB POSTGRES
+POSTGRES_DB=<db_name>
+POSTGRES_DB_PORT=<db_port>
+POSTGRES_USER=<db_user>
+POSTGRES_PASSWORD=<db_password>
+POSTGRES_HOST=<db_host>
